fix: dropdown on mobile

--- a/styles/components/_price-chart.scss
+++ b/styles/components/_price-chart.scss
@@ -95,5 +95,11 @@
   .common-price-chart .time-range-dropdown .dropdown-menu{
     display: flex;
     justify-content: center;
+
+    justify-content: center;
+    .dropdown-content > .dropdown-item {
+      padding: 0;
+      align-items: center;
+    }
   }
 }
